fix: overflow

--- a/packages/client/src/css/index.css
+++ b/packages/client/src/css/index.css
@@ -12,4 +12,5 @@ html, body{
 
 #root{
   height: 100%;
+  overflow: hidden;
 }
